@@ -2,7 +2,7 @@
 # Kernel/Output/HTML/Layout.pm - provides generic HTML output
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Layout.pm,v 1.176.2.11 2009/12/09 14:30:12 mg Exp $
+# $Id: Layout.pm,v 1.176.2.12 2009/12/09 17:05:14 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::Language;
 use Kernel::System::HTMLUtils;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.176.2.11 $) [1];
+$VERSION = qw($Revision: 1.176.2.12 $) [1];
 
 =head1 NAME
 
@@ -1736,17 +1736,21 @@ sub Ascii2Html {
     my $StripEmptyLines = $Param{StripEmptyLines} || '';
     my $Type            = $Param{Type}            || '';
 
-    return if !defined $Param{Text};
+    return '' if !defined $Param{Text};
 
     # check ref
     my $TextScalar;
     my $Text;
+
     if ( !ref $Param{Text} ) {
         $TextScalar = 1;
         $Text       = \$Param{Text};
     }
-    else {
+    elsif ( ref $Param{Text} eq 'SCALAR' ) {
         $Text = $Param{Text};
+    }
+    else {
+        return '';
     }
 
     my @Filters;
@@ -4396,6 +4400,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.176.2.11 $ $Date: 2009/12/09 14:30:12 $
+$Revision: 1.176.2.12 $ $Date: 2009/12/09 17:05:14 $
 
 =cut
