@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.77 2009/12/09 14:30:12 mg Exp $
+# $Id: CHANGES,v 1.993.2.78 2009/12/09 17:05:57 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.
  - (2009/12/09) Fixed bug#4551 - GenericAgent appends leading zeros to dates
     if TimeInputFormat is "Input".
  - (2009/12/09) Fixed bug#4584 - Auto response does not use selected from e-mail
